<resources>
    <string name="app_name">Instagram Design</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="or">or</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t remember password?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="todo">TODO</string>
</resources>
